--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,18 @@
         }
     ],
 
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/igorgoroshit/asset-pipeline"
-        }
-    ],
-
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "codesleeve/asset-pipeline": "*"
+        "codesleeve/asset-pipeline": "dev-master"
     },
+    
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/igorgoroshit/asset-pipeline"
+        }
+    ],
     
     "autoload": {
 
