--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     
     "repositories": [
         {
-            "type": "vcs",
+            "type": "github",
             "url": "https://github.com/igorgoroshit/asset-pipeline"
         }
     ],
