--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     
     "repositories": [
         {
-            "type": "git",
+            "type": "vcs",
             "url": "https://github.com/igorgoroshit/asset-pipeline"
         }
     ],
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "igorgoroshit/asset-pipeline": "*"
+        "igorgoroshit/asset-pipeline": "dev-master"
     },
 
     
