--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/igorgoroshit/asset-pipeline"
+            "url": "https://github.com/igorgoroshit/pipeline"
         }
     ],
     
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "igorgoroshit/asset-pipeline": "dev-master"
+        "igorgoroshit/pipeline": "*"
     },
 
     
