--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "igorgoroshit/pipeline": "dev-master"
+        "igorgoroshit/asset-pipeline": "dev-master"
     },
 
     
