--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,10 @@
         }
     ],
     
-    "repositories": [
-		{
-			"type": "git",
-			"url": "https://github.com/igorgoroshit/pipeline"
-		}
-    ],
-    
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
-        "igorgoroshit/pipeline": "*"
+        "codesleeve/asset-pipeline": "dev-master",
     },
 
     
